@@ -58,10 +58,14 @@ dependencies {
 	implementation 'software.amazon.awssdk:s3:2.25.46'
 	implementation 'software.amazon.awssdk:auth:2.25.46'
 	implementation 'software.amazon.awssdk:regions:2.25.46'
+
+	testImplementation 'com.h2database:h2'
 }
 
 tasks.named('test') {
     useJUnitPlatform {
         excludeTags 'benchmark'
     }
+
+	jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
